# Tetris

./: Aktive Klass Diagram  README.md  Tetris.uxf  final-Class.xmi  klass-diagram-final
Code/: Blocks.cpp  BlocksI.cpp  BlocksL.cpp  BlocksS.cpp  BlocksT.cpp  Blocks_BACKUP_3638.cpp  Bocks.cpp  Box.cpp  CMakeLists.txt  Game.cpp  Menu.cpp  Player.cpp  Playfild.cpp  Scorebord.cpp  g++.sh  main.cpp  save.tetris  tetris
Code/SFML/: Config.hpp.gch  Graphics.hpp.gch
Code/include/: Blocks.h  BlocksL.h  BlocksS.h  BlocksT.h  Bocks.h  Box.h  Game.h  Menu.h  Player.h  Playfild.h  Scorebord.h
Dev/: BlocksI.cpp  BlocksS.cpp  BlocksT.cpp  Playfild.cpp  Scorebord.cpp  main.cpp
Dev/include/: Blocks.h  BlocksI.h  Game.h  Menu.h  Scorebord.h
